Content upadated